--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "prisma": {
     "seed": "yarn rw exec seed"
   },
-  "packageManager": "yarn@3.2.1"
+  "packageManager": "yarn@3.2.1",
+  "dependencies": {
+    "@chakra-ui/icons": "^2.0.6"
+  }
 }
