--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@chakra-ui/icons": "^2.0.6",
-    "@chakra-ui/storybook-addon": "^4.0.6"
+    "@chakra-ui/storybook-addon": "^4.0.6",
+    "@testing-library/user-event": "^14.4.2"
   }
 }
